--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/vida_plus
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
