--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
+
+jwt.secret=${JWT_SECRET}
+jwt.issuer=vida-plus
