--- a/src/test/resources/application-integration-test.properties
+++ b/src/test/resources/application-integration-test.properties
@@ -2,3 +2,5 @@ spring.flyway.locations=classpath:db/migration
 spring.flyway.enabled=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 logging.level.org.flywaydb=DEBUG
+jwt.secret=4Z^XrroxR@dWxqf$mTTKwW$!@#qGr4P
+jwt.issuer=vida-plus
