VP-1 - limpeza de codigo em UserAuthenticationFilter.java, criacao de metodo para pegar o Authorization do cabecalho e adicao de prefixo "Bearer " em JwtTokenService.java, Adicao de processo Base64 em JwtConfig

--- a/src/test/resources/application-integration-test.properties
+++ b/src/test/resources/application-integration-test.properties
@@ -2,5 +2,5 @@ spring.flyway.locations=classpath:db/migration
 spring.flyway.enabled=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 logging.level.org.flywaydb=DEBUG
-jwt.secret=4Z^XrroxR@dWxqf$mTTKwW$!@#qGr4P
+jwt.secret=q3-7YvJk8R5sH6t9fU2yV8m1xL9aW0rQhTgPnK4eZ3I
 jwt.issuer=vida-plus
